{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 27,
  "lineage": "48c32261-c7e1-80d4-1721-030cea11e23f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011b9d1529237223a",
            "arn": "arn:aws:ec2:us-east-1:202145728564:elastic-ip/eipalloc-011b9d1529237223a",
            "domain": "vpc",
            "id": "eipalloc-011b9d1529237223a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-194-247.compute-1.amazonaws.com",
            "public_ip": "3.225.194.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "networking-lab-nat-eip-1"
            },
            "tags_all": {
              "Name": "networking-lab-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:internet-gateway/igw-084170c5dc44e7f38",
            "id": "igw-084170c5dc44e7f38",
            "owner_id": "202145728564",
            "tags": {
              "Name": "networking-lab-igw"
            },
            "tags_all": {
              "Name": "networking-lab-igw"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011b9d1529237223a",
            "association_id": "eipassoc-0d57777eaa7e41044",
            "connectivity_type": "public",
            "id": "nat-0a7d67fd87736ddb1",
            "network_interface_id": "eni-08aafb8e07032ccb5",
            "private_ip": "10.0.1.229",
            "public_ip": "3.225.194.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d1e2be78762af999",
            "tags": {
              "Name": "networking-lab-nat-1"
            },
            "tags_all": {
              "Name": "networking-lab-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:route-table/rtb-0bc7d2b3fc9c2c147",
            "id": "rtb-0bc7d2b3fc9c2c147",
            "owner_id": "202145728564",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "networking-lab-database-rt"
            },
            "tags_all": {
              "Name": "networking-lab-database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:route-table/rtb-01ea37944b3b897d4",
            "id": "rtb-01ea37944b3b897d4",
            "owner_id": "202145728564",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a7d67fd87736ddb1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "networking-lab-private-rt-1"
            },
            "tags_all": {
              "Name": "networking-lab-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:route-table/rtb-0d24471e4e3ed5456",
            "id": "rtb-0d24471e4e3ed5456",
            "owner_id": "202145728564",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084170c5dc44e7f38",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "networking-lab-public-rt"
            },
            "tags_all": {
              "Name": "networking-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0288d16e28c77fc07",
            "route_table_id": "rtb-0bc7d2b3fc9c2c147",
            "subnet_id": "subnet-008c3d6c338c0967f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c44cc3e1d045728a",
            "route_table_id": "rtb-0bc7d2b3fc9c2c147",
            "subnet_id": "subnet-0f950a7b1615fc34c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a3decbb20ee4463",
            "route_table_id": "rtb-0bc7d2b3fc9c2c147",
            "subnet_id": "subnet-0d788b3363908990c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0d42f873f8e6af8",
            "route_table_id": "rtb-01ea37944b3b897d4",
            "subnet_id": "subnet-0475f9654c4968a33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc269edc567f8b8d",
            "route_table_id": "rtb-01ea37944b3b897d4",
            "subnet_id": "subnet-0673e9a63f48f0731"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09897cc9970aae482",
            "route_table_id": "rtb-01ea37944b3b897d4",
            "subnet_id": "subnet-06abcc6849b901680"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09845709296d0edd1",
            "route_table_id": "rtb-0d24471e4e3ed5456",
            "subnet_id": "subnet-0d1e2be78762af999"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0376adbd9452d18ce",
            "route_table_id": "rtb-0d24471e4e3ed5456",
            "subnet_id": "subnet-07c32d949ad0822a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a5f146e67c86ff",
            "route_table_id": "rtb-0d24471e4e3ed5456",
            "subnet_id": "subnet-019162f273b1fa748"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-008c3d6c338c0967f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c3d6c338c0967f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-database-1",
              "Tier": "Database"
            },
            "tags_all": {
              "Name": "networking-lab-database-1",
              "Tier": "Database"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-0f950a7b1615fc34c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f950a7b1615fc34c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-database-2",
              "Tier": "Database"
            },
            "tags_all": {
              "Name": "networking-lab-database-2",
              "Tier": "Database"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-0d788b3363908990c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d788b3363908990c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-database-3",
              "Tier": "Database"
            },
            "tags_all": {
              "Name": "networking-lab-database-3",
              "Tier": "Database"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-0475f9654c4968a33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475f9654c4968a33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-private-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "networking-lab-private-1",
              "Tier": "Private"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-0673e9a63f48f0731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0673e9a63f48f0731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-private-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "networking-lab-private-2",
              "Tier": "Private"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-06abcc6849b901680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06abcc6849b901680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-private-3",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "networking-lab-private-3",
              "Tier": "Private"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-0d1e2be78762af999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1e2be78762af999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-public-1",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "networking-lab-public-1",
              "Tier": "Public"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-07c32d949ad0822a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c32d949ad0822a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-public-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "networking-lab-public-2",
              "Tier": "Public"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:subnet/subnet-019162f273b1fa748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019162f273b1fa748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202145728564",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "networking-lab-public-3",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "networking-lab-public-3",
              "Tier": "Public"
            },
            "vpc_id": "vpc-03a924f9985af7307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202145728564:vpc/vpc-03a924f9985af7307",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfbee985440ab675",
            "default_route_table_id": "rtb-08e80f1a6b29f8dc9",
            "default_security_group_id": "sg-0cac2721a83097ad2",
            "dhcp_options_id": "dopt-07577ddadb48fa2fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a924f9985af7307",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e80f1a6b29f8dc9",
            "owner_id": "202145728564",
            "tags": {
              "Environment": "dev",
              "Name": "networking-lab-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "networking-lab-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}